# rules_rust_bug_repo

./: README.md  WORKSPACE.bazel  logs.txt
demo/: BUILD.bazel
