# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Rules Rust

# http_archive(
#     name = "rules_rust",
#     sha256 = "696b01deea96a5e549f1b5ae18589e1bbd5a1d71a36a243b5cf76a9433487cf2",
#     urls = [
#         "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.11.0/rules_rust-v0.11.0.tar.gz",
#         "https://github.com/bazelbuild/rules_rust/releases/download/0.11.0/rules_rust-v0.11.0.tar.gz",
#     ],
# )

local_repository(
    name = "rules_rust",
    path = "/home/nathan/programming/rules_rust",
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
)

# Crate Universe

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies(bootstrap = True)

load(
    "//3rdparty/crates:crates.bzl",
    "crate_repositories",
)

crate_repositories()
